force-app/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Security Lead</fullName>
            </value>
            <value>
                <fullName>IT Manager</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>