force-app/main/default/objects/Contact/fields/Security_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Security_Stakeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Stakeholder</label>
    <type>Checkbox</type>
</CustomField>